--- a/homeworkjs.html
+++ b/homeworkjs.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Hangman Game</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="stylesheet">
+  
+  <link href="https://fonts.googleapis.com/css?family=Metal+Mania" rel="gamejssheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="gamejs.css">
 </head>
 
 <body>
@@ -16,42 +16,42 @@
 
     <div class="container">
         <div class="header row">
-            <div class="col-lg-8"><img src="assets/images/devil-wp-banner.jpg" class="mx-auto"></div>
-            <div class="quote col-lg-4"><p>“Depend upon it, sir, when a man knows he is to be hanged in a fortnight, it concentrates his mind wonderfully.”</p><p>― Samuel Johnson, The Life of Samuel Johnson</p></div>
+            <div class="col-lg-8"><img src="HangmanGame/images/devil-wp-banner.jpg" class="mx-auto"></div>
+            <div class="quote col-lg-4"><p><p>― </div>
         </div>
         
         <br>
 
         <div class="row main-section">
             <div class="col-md-4 instructions">
-                <p class="firstInstructions">Can you reveal the Daemon Lords' true names and banish them back to The Pit??</p>
-                <p>Successful guesses will reveal letters, but ten misses will cost you your soul!</p>
-                <p id="imperative">Press any key to abandon all hope.</p>
-                <p>Daemon Lords banished: <span id="lordsBanished"></span></p>
-                <p>Souls lost: <span id="soulsLost"></span></p>
+                <p class="firstInstructions"></p>
+                <p></p>
+                <p id="imperative"></p>
+                <p><span id="lordsBanished"></span></p>
+                <p><span id="soulsLost"></span></p>
             </div>
             <div class="col-md-4 word-display">
-                <h5>Daemon Lord's Name:</h5>
+                <h5></h5>
                 <p id="hangmanLine"></p>
-                <div class="victory" id="victoryBanner"><h3>DAEMON LORD BANISHED!</h3></div>
-                <div class="defeat" id="defeatBanner"><h3>THEY SWALLOWED YOUR SOUL!</h3></div>
+                <div class="victory" id="victoryBanner"><h3></h3></div>
+                <div class="defeat" id="defeatBanner"><h3></h3></div>
                 <button onclick="gameReset()" type="button" class="btn btn-warning mx-auto" id="warningButton">New Game</button>
             </div>
             <div class="col-md-3 pentagram">
-                <h5>Daemonic Ritual Progress:</h5>
+                <h5></h5>
                 <img id="pentagramStatus" src="assets/images/pentagram0.jpg"/>
-                <div class="guessesLeft"><p>(soul health remaining: <span id="guessesLeft"></span>)</p></div>
+                <div class="guessesLeft"><p><span id="guessesLeft"></span>)</p></div>
             </div>
         </div>
         <div class="row guessbox col-md-12">
-            <p class="guessrow">Letters Guessed: <span id="displayGuesses"></span></p>
+            <p class="guessrow"><span id="displayGuesses"></span></p>
         </div>
     </div>
 
 
     <script src="game.js"></script>
 
-    <div class="hiddenVid"><iframe width="560" height="315" src="https://www.youtube.com/embed/oCUMIp5Eatw?start=9&autoplay=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+    <div class="hiddenVid"><iframe width="560" height="315" src="https://www.youtube.com/watch?v=mwGtL-1AZLA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 
 </body>
 
